--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Montserrat:wght@400;700&family=Mountains+of+Christmas&display=swap');
 
 body {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat',
+    sans-serif;
 }
+
+/* container */
+.container {
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+.container-center {
+    max-width: 600px;
+    margin: auto;
+}
+
