--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Montserrat:wght@400;700&family=Mountains+of+Christmas&display=swap');
 
+:root {
+    --primary-color: #209CEE;
+    ;
+}
+
 body {
     font-family: 'Montserrat',
     sans-serif;
 }
 
 /* container */
+
 .container {
     padding-left: 1rem;
     padding-right: 1rem;
@@ -14,5 +20,24 @@ body {
 .container-center {
     max-width: 600px;
     margin: auto;
+}
+
+/* links */
+
+.link {
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+}
+
+.link-primary {
+    background-color: var(--primary-color);
+    border-radius: 0.5rem;
+    color: white;
+}
+
+.link-secondary {
+    color: var(--primary-color);
+    border-radius: 0.5rem;
+    border: 1px solid var(--primary-color);
 }
 
