--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,10 @@ body {
     sans-serif;
 }
 
+hr {
+    margin: 2rem 0rem;
+}
+
 /* container */
 
 .container {
@@ -39,5 +43,16 @@ body {
     color: var(--primary-color);
     border-radius: 0.5rem;
     border: 1px solid var(--primary-color);
+}
+
+/* lists */
+
+.list-non-bullet {
+    list-style: none;
+}
+
+.list-item-inline {
+    display: inline;
+    padding: 0rem 0.5rem;
 }
 
