--- a/styles.css
+++ b/styles.css
@@ -101,6 +101,7 @@ hr {
 
 .hero .hero-heading {
     padding-top: 1rem;
+    text-align: center;
     font-size: 2rem;
     color: var(--dark-gray);
 }
