updated root: colours

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Montserrat:wght@400;700&family=Mountains+of+Christmas&display=swap');
 
 :root {
-    --primary-color: #209CEE;
-    --white-color: #ffffff;
-    --dark-gray: #6b7280;
-    --light-gray: #f3f4f6;
+    --primary-color: #7C3AED;
+    --white-color: #FFFFFF;
+    --dark-gray: #6B7280;
+    --light-gray: #F3F4F6;
 }
 
 /* body */
