--- a/styles.css
+++ b/styles.css
@@ -134,6 +134,11 @@ hr {
     border-top-right-radius: 1rem;
 }
 
+.footer .footer-header {
+    font-weight: bold;
+    font-size: large;
+}
+
 .footer .link {
     color: var(--white-color);
 }
