--- a/styles.css
+++ b/styles.css
@@ -117,8 +117,12 @@ hr {
     padding: 2rem;
 }
 
+.section-list-padding {
+    padding-bottom: 2rem;
+}
+
 .section h1 {
-    text-align: center;
+    text-align: left;
 }
 
 .off-white {
